# OS_Ex3

./: CMakeLists.txt  Job.cpp  Job.h  MapReduceClient.cpp  MapReduceFramework.cpp  README.md  main.cpp
